# acopio-api

./: .env.example  .mailmap  IMPLEMENTATION_PLAN.md  README.md  frontend_sync_spec.md  migracion_inicial.sql  pyproject.toml  render.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  898ba293865e_add_dlq_and_extend_sync_log.py  a1b2c3d4e5f6_add_clothing_detail_and_seed_categories.py  b2c3d4e5f6a7_add_barcode_to_package_item.py  c3d4e5f6a7b8_add_product_catalog.py
app/: admin_panel.py  main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  admin.py  camps.py  products.py  qrcodes.py  sync.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  domain.py
app/schemas/: __init__.py  domain.py  sync.py
app/services/: sync_service.py
