[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acopio-api"
version = "0.1.0"
description = "API for Acopio MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "alembic>=1.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "reportlab>=4.0.0",
    "qrcode>=7.4.2",
    "wtforms<3.2.0",
    "sqladmin[full]>=0.16.1"
]

[tool.uv]
native-tls = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
